# rplidar_sdk_fork

sdk/: CMakeLists.txt
sdk/include/: rplidar_python_c_interface.h  rplidar_python_interface.h
sdk/src/: rplidar_python_c_interface.c  rplidar_python_interface.cpp
